ready for weapons

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1752,7 +1752,7 @@ input.sheet-skill-select {
     .sheet-npc .sheet-body .sheet-column {
       width: 100%; }
     .sheet-npc .sheet-body .sheet-rows {
-      margin-bottom: 2%;
+      margin-bottom: 1%;
       width: 100%; }
       .sheet-npc .sheet-body .sheet-rows button {
         font-size: 1.1em;
@@ -1783,50 +1783,50 @@ input.sheet-skill-select {
           width: 4em; }
           .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='initiate'] input, .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='submersion'] input {
             width: 100%; }
-    .sheet-npc .sheet-body div.sheet-skills {
+    .sheet-npc .sheet-body div.sheet-repeating {
       grid-column: 1 / 4;
       /*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/ }
-      .sheet-npc .sheet-body div.sheet-skills h1 {
+      .sheet-npc .sheet-body div.sheet-repeating h1 {
         display: inline; }
-      .sheet-npc .sheet-body div.sheet-skills h2 {
+      .sheet-npc .sheet-body div.sheet-repeating h2 {
         font-variant: small-caps;
         text-align: center;
         text-decoration: underline; }
-      .sheet-npc .sheet-body div.sheet-skills input[type='number'] {
+      .sheet-npc .sheet-body div.sheet-repeating input[type='number'] {
         width: 100%; }
-      .sheet-npc .sheet-body div.sheet-skills input[name='attr_flag'] {
+      .sheet-npc .sheet-body div.sheet-repeating input[name='attr_flag'] {
         position: absolute;
         opacity: 0;
         z-index: 2; }
-        .sheet-npc .sheet-body div.sheet-skills input[name='attr_flag'] + span {
+        .sheet-npc .sheet-body div.sheet-repeating input[name='attr_flag'] + span {
           opacity: 0; }
-        .sheet-npc .sheet-body div.sheet-skills input[name='attr_flag']:checked + span {
+        .sheet-npc .sheet-body div.sheet-repeating input[name='attr_flag']:checked + span {
           color: #FCD116;
           opacity: 1; }
-        .sheet-npc .sheet-body div.sheet-skills input[name='attr_flag']:checked ~ .sheet-settings {
+        .sheet-npc .sheet-body div.sheet-repeating input[name='attr_flag']:checked ~ .sheet-settings {
           display: inline-grid;
           margin-bottom: 2%; }
-      .sheet-npc .sheet-body div.sheet-skills div.repitem:hover > input[name='attr_flag'] + span {
+      .sheet-npc .sheet-body div.sheet-repeating div.repitem:hover > input[name='attr_flag'] + span {
         opacity: 1; }
-      .sheet-npc .sheet-body div.sheet-skills div.repitem div.sheet-settings {
+      .sheet-npc .sheet-body div.sheet-repeating div.repitem div.sheet-settings {
         min-width: 700px;
         grid-template-columns: 2fr 8em 8em 1fr 1fr;
         grid-column-gap: 1%; }
-        .sheet-npc .sheet-body div.sheet-skills div.repitem div.sheet-settings h2[data-i18n='specializations'] {
+        .sheet-npc .sheet-body div.sheet-repeating div.repitem div.sheet-settings h2.sheet-full-row {
           grid-column: 1 / 6;
           text-align: left; }
-        .sheet-npc .sheet-body div.sheet-skills div.repitem div.sheet-settings label[data-i18n-title="specializations"] {
+        .sheet-npc .sheet-body div.sheet-repeating div.repitem div.sheet-settings label.sheet-full-row {
           grid-column: 1 / 6; }
-          .sheet-npc .sheet-body div.sheet-skills div.repitem div.sheet-settings label[data-i18n-title="specializations"] input[type='text'] {
+          .sheet-npc .sheet-body div.sheet-repeating div.repitem div.sheet-settings label.sheet-full-row input[type='text'] {
             text-align: left;
             width: 100%; }
-      .sheet-npc .sheet-body div.sheet-skills div.repitem span[name='attr_display_rating']:after {
+      .sheet-npc .sheet-body div.sheet-repeating div.repitem span[name*='attr_display_rating']:after {
         content: ','; }
-      .sheet-npc .sheet-body div.sheet-skills div.repcontainer {
+      .sheet-npc .sheet-body div.sheet-repeating div.repcontainer {
         display: inline;
         max-width: 500px; }
-        .sheet-npc .sheet-body div.sheet-skills div.repcontainer .repitem,
-        .sheet-npc .sheet-body div.sheet-skills div.repcontainer .repcontrol {
+        .sheet-npc .sheet-body div.sheet-repeating div.repcontainer .repitem,
+        .sheet-npc .sheet-body div.sheet-repeating div.repcontainer .repcontrol {
           display: inline-block;
           vertical-align: top;
           margin-bottom: 0px; }
