--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -325,7 +325,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		}
 
 		.sheet-rows {
-			margin-bottom: 2%;
+			margin-bottom: 1%;
 			width: 100%;
 
 			button {
@@ -375,7 +375,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		}
 
 		/*:+:+:+: SKILLS :+:+:+:*/
-		div.sheet-skills {
+		div.sheet-repeating {
 			grid-column: 1 / 4;
 
 			h1 {display: inline;}
@@ -413,12 +413,12 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					grid-template-columns: 2fr 8em 8em 1fr 1fr;
 					grid-column-gap: 1%;
 
-					h2[data-i18n='specializations'] {
+					h2.sheet-full-row {
 						grid-column: 1 / 6;
 						text-align: left;
 					}
 
-					label[data-i18n-title="specializations"] {
+					label.sheet-full-row {
 						grid-column: 1 / 6;
 
 						input[type='text']{ 
@@ -428,7 +428,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					}
 				}
 
-				span[name='attr_display_rating']:after {
+				span[name*='attr_display_rating']:after {
 					content: ',';
 				}
 			}
