--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1118,6 +1118,15 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     z-index: -1;
 }
 
+.sheet-traits .sheet-row-details.sheet-notebox {
+    height: 110px;
+}
+
+.sheet-traits .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 110px;
+    width: 100%;
+}
+
 /* -- repeating disadvantages -- */
 .sheet-disadvantages { width: calc(100% - 0.4em); }
 .sheet-disadvantages .sheet-col0 { width: calc(100% - 137px); }
@@ -1135,6 +1144,15 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     z-index: -1;
 }
 
+.sheet-disadvantages .sheet-row-details.sheet-notebox {
+    height: 110px;
+}
+
+.sheet-disadvantages .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 110px;
+    width: 100%;
+}
+
 /* -- repeating racial traits -- */
 .sheet-racial { width: calc(100% - 0.4em); }
 .sheet-racial .sheet-col0 { width: calc(100% - 137px); }
@@ -1150,6 +1168,15 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
 .sheet-racial .repcontainer.ui-sortable.editmode .sheet-toggle {
     opacity: 0;
     z-index: -1;
+}
+
+.sheet-racial .sheet-row-details.sheet-notebox {
+    height: 110px;
+}
+
+.sheet-racial .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 110px;
+    width: 100%;
 }
 
 /* -- MISC TAB -- */
@@ -1741,6 +1768,15 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
 .sheet-items input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
 .sheet-items input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details {
     background: #B7FFAA;    
+}
+
+.sheet-items .sheet-row-details.sheet-notebox {
+    height: 110px;
+}
+
+.sheet-items .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 110px;
+    width: 100%;
 }
 
 /* -- Bold Carried Items -- */
