--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -832,9 +832,14 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-ranged-attacks .sheet-tooltip { margin-left: -100px; }
 .sheet-ranged-attacks .sheet-col1 .sheet-tooltip { margin-left: -40px; }
 .sheet-encumberance .sheet-tooltip { margin-left: -40px; }
-.sheet-points .sheet-tooltip { margin-left: -300px; }
+.sheet-points .sheet-tooltip { margin-left: -310px; }
 .sheet-spells .sheet-col11 .sheet-tooltip { margin-left: -150px; }
 .sheet-spells .sheet-col12 .sheet-tooltip { margin-left: -200px; }
+
+.sheet-points .sheet-cell .sheet-tooltip {
+    margin-left: -290px;
+    width: 246px;
+}
 
 .sheet-thrown-object {
     width: calc(100% - 140px - 0.8em);
@@ -873,8 +878,8 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-attribute .sheet-row-willpower .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-willpower .sheet-col1 input { font-size: 16px; }
 .sheet-attribute .sheet-row-willpower .sheet-tooltip { font-size: 11px; }
-.sheet-attribute .sheet-row-thrust-damage .sheet-tooltip { font-size: 11px; margin-left: 50px; top: 200px; }
-.sheet-attribute .sheet-row-swing-damage .sheet-tooltip { font-size: 11px; margin-left: 50px; top: 200px; }
+.sheet-attribute .sheet-row-thrust-damage .sheet-tooltip { font-size: 11px; margin-left: 10px;}
+.sheet-attribute .sheet-row-swing-damage .sheet-tooltip { font-size: 11px; margin-left: 10px;}
 .sheet-attribute .sheet-row-condition-stun { height: 25px; }
 .sheet-attribute .sheet-row-condition-stun .sheet-col0,
 .sheet-attribute .sheet-row-condition-stun .sheet-col0 input { 
