weapons npc finished

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -1664,7 +1664,7 @@ input.sheet-skill-select {
     color: #fff; }
   .sheet-npc h1 {
     line-height: unset;
-    font-size: 1.25em; }
+    font-size: 1.1em; }
   .sheet-npc h2 {
     font-size: 1em;
     text-transform: capitalize; }
@@ -1748,7 +1748,9 @@ input.sheet-skill-select {
     grid-template-columns: 52% 30% 1fr;
     width: 100%;
     /*:+:+:+: TEXT AREAS :+:+:+:*/
-    /*:+:+:+: SKILLS :+:+:+:*/ }
+    /*:+:+:+: SKILLS :+:+:+:*/
+    /*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/
+    /*:+:+:+: WEAPONS :+:+:+:*/ }
     .sheet-npc .sheet-body .sheet-column {
       width: 100%; }
     .sheet-npc .sheet-body .sheet-rows {
@@ -1784,15 +1786,14 @@ input.sheet-skill-select {
           .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='initiate'] input, .sheet-npc .sheet-body .sheet-textrow label[data-i18n-title='submersion'] input {
             width: 100%; }
     .sheet-npc .sheet-body div.sheet-repeating {
-      grid-column: 1 / 4;
-      /*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/ }
+      grid-column: 1 / 4; }
       .sheet-npc .sheet-body div.sheet-repeating h1 {
         display: inline; }
       .sheet-npc .sheet-body div.sheet-repeating h2 {
         font-variant: small-caps;
         text-align: center;
         text-decoration: underline; }
-      .sheet-npc .sheet-body div.sheet-repeating input[type='number'] {
+      .sheet-npc .sheet-body div.sheet-repeating input[type='number'], .sheet-npc .sheet-body div.sheet-repeating input[type='text'] {
         width: 100%; }
       .sheet-npc .sheet-body div.sheet-repeating input[name='attr_flag'] {
         position: absolute;
@@ -1809,27 +1810,40 @@ input.sheet-skill-select {
       .sheet-npc .sheet-body div.sheet-repeating div.repitem:hover > input[name='attr_flag'] + span {
         opacity: 1; }
       .sheet-npc .sheet-body div.sheet-repeating div.repitem div.sheet-settings {
-        min-width: 700px;
-        grid-template-columns: 2fr 8em 8em 1fr 1fr;
-        grid-column-gap: 1%; }
-        .sheet-npc .sheet-body div.sheet-repeating div.repitem div.sheet-settings h2.sheet-full-row {
-          grid-column: 1 / 6;
+        min-width: 700px; }
+    .sheet-npc .sheet-body div.sheet-inline-repeating div.repitem div.sheet-settings {
+      grid-template-columns: 2fr 8em 8em 1fr 1fr;
+      grid-column-gap: 1%; }
+      .sheet-npc .sheet-body div.sheet-inline-repeating div.repitem div.sheet-settings h2.sheet-full-row {
+        grid-column: 1 / 6;
+        text-align: left; }
+      .sheet-npc .sheet-body div.sheet-inline-repeating div.repitem div.sheet-settings label.sheet-full-row {
+        grid-column: 1 / 6; }
+        .sheet-npc .sheet-body div.sheet-inline-repeating div.repitem div.sheet-settings label.sheet-full-row input[type='text'] {
           text-align: left; }
-        .sheet-npc .sheet-body div.sheet-repeating div.repitem div.sheet-settings label.sheet-full-row {
-          grid-column: 1 / 6; }
-          .sheet-npc .sheet-body div.sheet-repeating div.repitem div.sheet-settings label.sheet-full-row input[type='text'] {
-            text-align: left;
-            width: 100%; }
-      .sheet-npc .sheet-body div.sheet-repeating div.repitem span[name*='attr_display_rating']:after {
-        content: ','; }
-      .sheet-npc .sheet-body div.sheet-repeating div.repcontainer {
-        display: inline;
-        max-width: 500px; }
-        .sheet-npc .sheet-body div.sheet-repeating div.repcontainer .repitem,
-        .sheet-npc .sheet-body div.sheet-repeating div.repcontainer .repcontrol {
-          display: inline-block;
-          vertical-align: top;
-          margin-bottom: 0px; }
+    .sheet-npc .sheet-body div.sheet-inline-repeating div.repitem span[name*='attr_display_rating']:after {
+      content: ','; }
+    .sheet-npc .sheet-body div.sheet-inline-repeating div.repcontainer {
+      display: inline;
+      max-width: 500px; }
+      .sheet-npc .sheet-body div.sheet-inline-repeating div.repcontainer .repitem,
+      .sheet-npc .sheet-body div.sheet-inline-repeating div.repcontainer .repcontrol {
+        display: inline-block;
+        vertical-align: top;
+        margin-bottom: 0px; }
+    .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings {
+      grid-template-columns: 5em 3em 2fr 2fr 3em 3em 3em 1fr 3em 3em 1.25em;
+      grid-column-gap: 0.2%; }
+      .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings select, .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings label, .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings span {
+        grid-row: 2; }
+      .sheet-npc .sheet-body div.sheet-weapons div.sheet-settings label[data-i18n-title='notes'] {
+        grid-area: 3 / 1 / 3 / 12; }
+    .sheet-npc .sheet-body div.sheet-weapons span[name='attr_weapon_dice'] {
+      vertical-align: middle; }
+      .sheet-npc .sheet-body div.sheet-weapons span[name='attr_weapon_dice']:before {
+        content: '('; }
+      .sheet-npc .sheet-body div.sheet-weapons span[name='attr_weapon_dice']:after {
+        content: ')'; }
   .sheet-npc .sheet-repeating h3 {
     font-variant: small-caps;
     text-align: center;
@@ -1861,7 +1875,14 @@ input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-attribute .s
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-attribute .sheet-settings.sheet-hide-resonance,
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body .sheet-settings.sheet-hide-magic,
 input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body .sheet-settings.sheet-hide-resonance, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-textrow, input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body input[type='hidden'][value=''] + div.sheet-rows.sheet-grunt, input[name='attr_display_specialization'][value=''] ~ button[name*='specialization'],
-input[name='attr_display_specialization'][value=' '] ~ button[name*='specialization'] {
+input[name='attr_display_specialization'][value=' '] ~ button[name*='specialization'], input[name='attr_weapon_range'][value='range'] ~ h2[data-i18n='reach'],
+input[name='attr_weapon_range'][value='range'] ~ label[data-i18n-title='reach'], input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='modes'],
+input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='recoil'],
+input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='ammo'],
+input[name='attr_weapon_range'][value='melee'] ~ label[data-i18n-title='modes'],
+input[name='attr_weapon_range'][value='melee'] ~ label[data-i18n-title='recoil'],
+input[name='attr_weapon_range'][value='melee'] ~ label[data-i18n-title='ammo'],
+input[name='attr_weapon_range'][value='melee'] ~ span {
   display: none; }
 
 .sheet-tab-switch[value='active'] ~ .sheet-skills-active,
