--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -218,7 +218,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 
 	h1 { 
 		line-height: unset;
-		font-size: 1.25em;
+		font-size: 1.1em;
 	}
 
 	h2 { 
@@ -385,7 +385,7 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				text-decoration: underline; 
 			}
 
-			input[type='number'] { width: 100%; }
+			input[type='number'], input[type='text'] { width: 100%; }
 
 			input[name='attr_flag'] { 
 				position: absolute;
@@ -404,12 +404,17 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				}
 			}
 
-    		 /*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/
 			div.repitem {
 				&:hover > input[name='attr_flag'] + span { opacity: 1; }
 
+				div.sheet-settings { min-width: 700px; }
+			}
+		}
+
+		 /*:+:+:+: NPC INLINE REPEAITNG SECTIONS SUCH AS SKILLS :+:+:+:*/
+		 div.sheet-inline-repeating {
+			div.repitem {
 				div.sheet-settings {
-					min-width: 700px;
 					grid-template-columns: 2fr 8em 8em 1fr 1fr;
 					grid-column-gap: 1%;
 
@@ -421,16 +426,11 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					label.sheet-full-row {
 						grid-column: 1 / 6;
 
-						input[type='text']{ 
-							text-align: left;
-							width: 100%;
-						}
+						input[type='text']{ text-align: left; }
 					}
 				}
 
-				span[name*='attr_display_rating']:after {
-					content: ',';
-				}
+				span[name*='attr_display_rating']:after { content: ','; }
 			}
 
 			div.repcontainer {
@@ -444,6 +444,25 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					margin-bottom : 0px;
 				}
 			}
+		 }
+
+		/*:+:+:+: WEAPONS :+:+:+:*/
+		div.sheet-weapons {
+			div.sheet-settings {
+				grid-template-columns: 5em 3em 2fr 2fr 3em 3em 3em 1fr 3em 3em 1.25em;
+				grid-column-gap: 0.2%;
+
+				select, label, span { grid-row: 2; }
+				label[data-i18n-title='notes'] { grid-area: 3 / 1 / 3 / 12; }
+			}
+
+			span[name='attr_weapon_dice'] {
+				vertical-align: middle;
+
+				&:before { content: '('; }
+				&:after { content: ')'; }
+			}
+
 		}
 	}
 
