--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -138,6 +138,22 @@
 		@extend %display-none;
 	}
 
+	//- NPC WEAPONS HIDE REACH OR RECOIL/AMMO BASED ON THE SELECTED RANGE
+	input[name='attr_weapon_range'][value='range'] ~ h2[data-i18n='reach'],
+	input[name='attr_weapon_range'][value='range'] ~ label[data-i18n-title='reach'] {
+		@extend %display-none;
+	}
+
+	input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='modes'],
+	input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='recoil'],
+	input[name='attr_weapon_range'][value='melee'] ~ h2[data-i18n='ammo'],
+	input[name='attr_weapon_range'][value='melee'] ~ label[data-i18n-title='modes'],
+	input[name='attr_weapon_range'][value='melee'] ~ label[data-i18n-title='recoil'],
+	input[name='attr_weapon_range'][value='melee'] ~ label[data-i18n-title='ammo'],
+	input[name='attr_weapon_range'][value='melee'] ~ span  {
+		@extend %display-none;
+	}
+
 	%highlight-button {
 		background-color: #610b0d;
 		box-shadow      : inset 0px 0px 3px 1px #e31715; 
