Ambitions & Avarice: v.0.6 main buttons added, preview img

--- a/Ambition_Avarice/ambition_avarice.css
+++ b/Ambition_Avarice/ambition_avarice.css
@@ -12,7 +12,6 @@ span{
 span.sheet-bold{
   font-weight: 800;
   font-size: medium;
-
 }
 
 label {
@@ -41,18 +40,18 @@ input[type="text"] {
   border-radius: 0px;
   border-color: black;
   padding: 0px 4px;
-  margin: 4px 0px;
+  margin: 0px 4px;
   width: auto;
 }
 
-input[type="number"] {
+input[type="number"]{
   background-color: transparent;
   border-style: none none solid none;
   border-width: 2px;
   border-radius: 0px;
   border-color: black;
   text-align: center;
-  width: 45px;
+  width: 40px;
 }
 
 textarea {
@@ -75,16 +74,18 @@ input[type="checkbox"].sheet-checkbox {
   border-radius: 0px;
 }
 
-textarea:empty,
-input[type="text"]:empty,
-input[type="number"]:empty{
-  background-color: #e5e5e5;
+/* highlights empty fields with light gray */
+textarea:placeholder-shown,
+input[type="text"]:placeholder-shown,
+input[type="number"]:placeholder-shown{
+  background-color: #EAC9D1;
 }
 
+/* higlight selected input */
 textarea:focus,
 input[type="text"]:focus,
 input[type="number"]:focus{
-  background-color: #F6CED8;
+  background-color: #9E9698;
 }
 
 
@@ -256,7 +257,7 @@ div.sheet-pg2 {
   display: grid;
   grid-gap: 1px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 130px auto;
+  grid-template-rows: 70px auto;
   grid-template-areas:"coin  companions"
                       "equip companions";
   width: 750px;
@@ -269,9 +270,9 @@ div.sheet-pg3 {
   display: grid;
   grid-gap: 1px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 150px auto;
+  grid-template-rows: 60px auto;
   grid-template-areas:"npc-main npc-main"
-                      "notes    notes   ";
+                      ".        notes   ";
   width: 600px;
   height: 700px;
   position: relative;
@@ -296,6 +297,9 @@ div.sheet-name div{
 div.sheet-name input{
   width: 150px;
 }
+div.sheet-name .sheet-short{
+  width: 60px;
+}
 
 /* LOGO SECTION */
 div.sheet-logo{
@@ -309,15 +313,16 @@ div.sheet-logo{
 div.sheet-attrs{
   grid-area: attrs;
 }
-div.sheet-attrs div.sheet-center{
-  grid-area: attrs;
+div.sheet-attrs span{
+  width: 25px;
+  margin-top: 4px;
 }
 div.sheet-attrs input[type="number"],
 div.sheet-saving input[type="number"],
 div.sheet-dungeon input[type="number"]{
   width:30px;
-  padding: 4px 0px;
-  margin: 0px 4px;
+  padding: 0px 0px;
+  margin: 4px 4px;
 }
 
 /* HP AC SECTION */
@@ -353,6 +358,9 @@ div.sheet-hp-ac div.sheet-spaced label{
   width: 65px;
   text-align: end;
 }
+div.sheet-hp-ac div.sheet-die input[type="text"]{
+  width: 40px;
+}
 
 div.sheet-saving{
   grid-area: saving;
@@ -361,7 +369,9 @@ div.sheet-saving{
 div.sheet-dungeon{
   grid-area: dungeon;
 }
-
+div.sheet-dungeon label.sheet-title{
+  text-align: start;
+}
 div.sheet-dungeon label.sheet-title,
 div.sheet-sixes label.sheet-title{
   width: 150px;
@@ -410,6 +420,10 @@ div.sheet-spells-d label:not(.sheet-title){
 
 div.sheet-speed{
   grid-area: speed;
+  align-items: flex-end;
+}
+div.sheet-speed label{
+  margin: 5px 2px;
 }
 div.sheet-speed .sheet-title,
 div.sheet-spells-d .sheet-title{
@@ -444,6 +458,9 @@ div.sheet-exp label:not(.sheet-title){
 div.sheet-coin{
   grid-area: coin;
 }
+div.sheet-coin label{
+  text-align: center;
+}
 
 div.sheet-equip{
   grid-area: equip;
@@ -452,13 +469,7 @@ div.sheet-equip{
 div.sheet-companions{
   grid-area: companions;
 }
-div.sheet-companions div.sheet-row input:nth-of-type(1),
-div.sheet-companions div.sheet-row input:nth-of-type(2){
-  width: 50%;
-}
-div.sheet-companions div.sheet-row input:nth-of-type(3){
-  width: 100%;
-}
+
 
 /* ------- page 3 NPC ------------ */
 
